Added styles to statistics

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,11 @@
 @import "bootstrap";
 @import "font-awesome";
 @import "error_message";
+@import "user_statistics";
+
+.statistics_color {
+  background-color: rgb(75, 192, 192);
+}
 
 
 .kaboom{
