--- a/app/views/statistics/show.html.erb
+++ b/app/views/statistics/show.html.erb
@@ -1,3 +1,73 @@
-<%= @user.inspect %>
+<div class="row bg-light">
+  <div class="col">
+    <div class="flex">
+      <div class="container">
+        <h4><%= @user.nickname %> Stats</h4>
+        <div class="stats__card row">
+
+          <div class="col">
+            <div class="d-flex">
+                <div class="">
+                  <i class="fa-solid fa-skull text-danger icons"></i>
+                </div>
+                <div class="p-1">
+                  <h5><%= @user.total_kills %> Total </h5>
+                  <p class="text-secondary">
+                    Player Kills
+                  </p>
+                </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="d-flex">
+              <div class="">
+                                <i class="fa-solid fa-chess-board icons text-warning"></i>
+              </div>
+              <div class="p-1">
+                <h5><%= @user.total_damage %> Damage</h5>
+                                <p class="text-secondary">
+                                  To Players
+                                </p>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col">
+            <div class="d-flex">
+              <div class="">
+                                <i class='fa-solid fa-meteor icons text-primary'></i>
+
+              </div>
+              <div class="p-1">
+                <h5><%= @user.total_games_played %> Total</h5>
+                                <p class="text-secondary">
+                                  Games Played
+                                </p>
+              </div>
+            </div>
+          </div>
+
+
+
+
+        </div>
+      </div>
+
+
+      <div>
+        <canvas id="<%= dom_id @user %>" data-controller="players"
+                data-labels="<%= format_date(@user.kills_per_game.keys) %>"
+                data-data="<%= @user.kills_per_game.values %>"
+        ></canvas>
+      </div>
+    </div>
+  </div>
+  <div class="col"></div>
+</div>
+
+
+
 
 <%= link_to 'Back', root_path %>
