--- a/app/views/statistics/_statistic.html.erb
+++ b/app/views/statistics/_statistic.html.erb
@@ -15,7 +15,7 @@
     <p class="card-text mt-4">Total Number of Kills <%= user.total_kills %></p>
     <div>
       <h5>Who is your bitch?</h5>
-      <%= bar_chart user.death_players, xtitle: "Kills" %>
+      <%= bar_chart user.death_players.take(2), xtitle: "Kills" %>
     </div>
   </div>
   <%= link_to 'More Information', statistic_path(user)  %>
