Dev add users (#2)
* Added stimulus component nested_form

* Improved error message system

* Corrected form to add players to game

* Improved view for position in game creation

* Added online update status

* Updated root_page

* Added validation on players position

* Added query

* Refactor buttons

* Added icons to helper

* Added constrains

* Added constrains

* Improved layout of statistics

* Added new visualitation

* Added query for User

* Added styles to statistics

* refactor order

* refactor delete_games btn

* Added dmg_done in players

* Added average dmg per game and win rate

* refactor kills_per_game

* refactor win_rate_stats

* Added styles

* Added validattion to game

* Commit unnecessary code

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,10 +1,13 @@
 <div class="p-2">
+  <div class="col mb-5">
+    <%= render 'delete_game' if @game_owner%>
+  </div>
   <div class="row">
     <div class="col">
       <%= turbo_stream_from dom_id @game %>
         <%= turbo_frame_tag dom_id @game do %>
           <% @players.each do |player| %>
-            <div class="d-flex align-items-center">
+            <div class="d-flex align-items-center py-1">
               <%= render 'players/player', player:player %>
               <%= damage_to_enemies player, current_user %>
             </div>
@@ -12,10 +15,7 @@
         <% end %>
     </div>
     <div class="col">
-        <%= render 'kaboom', id: current_user.player.id %>
-    </div>
-    <div class="col">
-      <%= render 'delete_game' if @game_owner%>
+      <%= render 'kaboom', id: current_user.player.id %>
     </div>
   </div>
 </div>
