--- a/app/views/players/_damage_to_enemies.html.erb
+++ b/app/views/players/_damage_to_enemies.html.erb
@@ -1,7 +1,3 @@
-<%= link_to '', data: {
-  controller: 'players',
-  player_id: id,
-  action: 'players#damage_to_enemies'
-}, class: 'damage_to_enemies' do %>
-  <i class="fa-solid fa-cloud-bolt"></i>
-<% end %>
+<%= button_to raw(thunder_icon),
+    damage_to_enemies_players_path({ id: id}),
+              class: 'btn btn-warning' %>
