--- a/app/views/statistics/_statistic.html.erb
+++ b/app/views/statistics/_statistic.html.erb
@@ -1,20 +1,22 @@
 
 
-<div class="card" style="width: 18rem;">
+<div class="card my-1" style="width: 18rem;">
   <div class="card-body">
     <h3 class="card-title"> <%= user.nickname %></h3>
-    <%= pie_chart user.win_rate %>
+    <% if user.games? %>
+       <canvas id="<%= dom_id user %>" data-controller="game"
+                    data-labels="<%= user.win_rate_stats.keys %>"
+                    data-data="<%= user.win_rate_stats.values %>"
+       ></canvas>
+    <% end %>
+    <div>
 
-<!--    <p class="card-text">AoE: <%#=user.aoe %></p>-->
-
-<!--    <p class="card-text">Heal: <%#=user.heal %></p>-->
-<!--    <p class="card-text">Wins: <%#=user.wins %></p>-->
-<!--    <p class="card-text">Total_games: <%#= user.total_games %></p>-->
-<!--    <p class="card-text">Total damage: <%#= user.total_damage %></p>-->
+    </div>
     <p class="card-text mt-4">Total Number of Kills <%= user.total_kills %></p>
     <div>
       <h5>Who is your bitch?</h5>
-      <%= bar_chart user.death_players, xtitle: "Kills" %>
+      <%= bar_chart user.death_players.take(2), xtitle: "Kills" %>
     </div>
   </div>
+  <%= link_to 'More Information', statistic_path(user)  %>
 </div>
