added offline status when closing windows

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,3 +1,4 @@
+<div data-controller="hello"></div>
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid px-4">
     <% if user_signed_in? %>
