refactor navbar data-controller

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,4 @@
-<div data-controller="hello"></div>
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-light bg-light" data-controller="hello">
   <div class="container-fluid px-4">
     <% if user_signed_in? %>
       <div class="d-flex">
